Updates the copyright and attribution stuff etc

--- a/example/index.html
+++ b/example/index.html
@@ -52,9 +52,9 @@
 		
 		<h2>WTF?</h2>
 		<p>
-			WormHole was built for the Rotify project to allow overnight shifts to be scheduled easily and intuitively. It'll fit snugly into any similar 
-			situation, where the user needs to share child objects amongst discrete containers. The codebase is minimal and it is easily customisable. However
-			it is new so allow for a lot of bugs. We'll keep updating it to cope as we use it in production. 
+			WormHole was built for the ShiftDock (previously Rotify) project to allow overnight shifts to be scheduled easily and intuitively. It'll fit snugly into 
+			any similar situation, where the user needs to share child objects amongst discrete containers. The codebase is minimal and it is easily customisable. 
+			However it is new so allow for a lot of bugs. We'll keep updating it to cope as we use it in production. 
 		</p>
 		
 		<p>
@@ -63,7 +63,7 @@
 		</p>
 		
 		<hr />
-		<span class="small quiet right">&copy; Rotify Ltd. 2011</span>
+		<span class="small quiet right">&copy; ShiftDock Ltd. 2011</span>
 	</div>
 </body>
 </html>
